--- a/test.html
+++ b/test.html
@@ -15,11 +15,11 @@
         <div class="cajaPregunta">Pregunta 1</div>
         <p>
           <ul class="cajaRespuestas">
-            <li class="resp resp0" data-item="0"></li>
-            <li class="resp resp1" data-item="1"></li>
-            <li class="resp resp2" data-item="2"></li>
-            <li class="resp resp3" data-item="3"></li>
             <li class="resp resp4" data-item="4"></li>
+            <li class="resp resp3" data-item="3"></li>
+            <li class="resp resp2" data-item="2"></li>
+            <li class="resp resp1" data-item="1"></li>
+            <li class="resp resp0" data-item="0"></li>
           </ul>
         </p>
       </div>
@@ -30,11 +30,11 @@
         <div class="cajaPregunta"></div>
         <p>
           <ul class="cajaRespuestas">
-            <li class="dragResp resp0" data-item="0"></li>
-            <li class="dragResp resp1" data-item="1"></li>
-            <li class="dragResp resp2" data-item="2"></li>
-            <li class="dragResp resp3" data-item="3"></li>
             <li class="dragResp resp4" data-item="4"></li>
+            <li class="dragResp resp3" data-item="3"></li>
+            <li class="dragResp resp2" data-item="2"></li>
+            <li class="dragResp resp1" data-item="1"></li>
+            <li class="dragResp resp0" data-item="0"></li>
           </ul>
         </p>
 
@@ -51,6 +51,21 @@
         </div>
       </div>
       <!-- /Bloque 3 -->
+
+      <!-- Bloque 4 -->
+      <div id="bloque4">
+        <div class="cajaPregunta">Pregunta 1</div>
+        <p>
+          <ul class="cajaRespuestas">
+            <li class="resp resp4" data-item="4"></li>
+            <li class="resp resp3" data-item="3"></li>
+            <li class="resp resp2" data-item="2"></li>
+            <li class="resp resp1" data-item="1"></li>
+            <li class="resp resp0" data-item="0"></li>
+          </ul>
+        </p>
+      </div>
+      <!-- /Bloque 4 -->
 
     </div>
   </div>
