--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
       <div id="bloque3">
         <div class="cajaPregunta"></div>
         <div class="cajaRespuestas">
-          <table id="preguntasRespuestas"></table>
+          <table class="preguntasRespuestas"></table>
           <input type="button" value="Siguiente" class="btnSiguiente" />
         </div>
       </div>
@@ -83,7 +83,17 @@
         <div class="objetoDroppable"></div>
       </div>
       <!-- /Bloque 5 -->
-  
+      
+      <!-- Bloque 6-->
+      <div id="bloque6">
+        <div class="cajaPregunta"></div>
+        <div class="cajaRespuestas">
+          <table class="preguntasRespuestas"></table>
+          <input type="button" value="Siguiente" class="btnSiguiente" />
+        </div>
+      </div>
+      <!-- /Bloque 6 -->
+
     </div>
   </div>
 
