--- a/test.html
+++ b/test.html
@@ -99,6 +99,7 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
+  <script src="js/underscore.js"></script>
   <script src="js/exVocacional.js"></script>
   <script>
     $(function(){ $.exVocacional(); })
