--- a/test.html
+++ b/test.html
@@ -97,6 +97,63 @@
     </div>
   </div>
 
+      <!-- modal 1 -->
+      <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Instrucciones</h4>
+                </div>
+                <div class="modal-body">
+                    <p>En el siguiente bloque tienes que dar click a la respuesta que elijas!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar</button>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!-- modal 1 -->
+
+      <!-- modal 2 -->
+      <div id="myModal2" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Instrucciones</h4>
+                </div>
+                <div class="modal-body">
+                    <p>En el siguiente bloque tienes que jalar la respuesta que elijas al bote de basura!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar</button>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!-- modal 2 -->
+
+      <!-- modal 3 -->
+      <div id="myModal3" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Instrucciones</h4>
+                </div>
+                <div class="modal-body">
+                    <p>En el siguiente bloque tienes seleccionar la respuesta que elijas!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar</button>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!-- modal 3 -->
+
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/underscore.js"></script>
@@ -104,5 +161,10 @@
   <script>
     $(function(){ $.exVocacional(); })
   </script>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/bootstrap.min.js"></script>
+ 
+
+
 </body>
 </html>
