--- a/test.html
+++ b/test.html
@@ -154,6 +154,26 @@
       </div>
       <!-- modal 3 -->
 
+      <!-- modal Alert -->
+      <div id="myModalAlert" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Alerta</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Existen elementos vacios!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar</button>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!-- modal Alert -->
+
+
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/underscore.js"></script>
