Agregando modalAlert DeTermino

--- a/test.html
+++ b/test.html
@@ -173,6 +173,25 @@
       </div>
       <!-- modal Alert -->
 
+      <!-- modal Alert 2-->
+      <div id="myModalAlert2" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Alerta</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Hemos terminado el proceso!</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar</button>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!-- modal Alert 2-->
+
 
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
