tamano de letra

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="slide">
 							<h1>¿Qué es y cuál es su objetivo?</h1>
 							<blockquote class="bck">
- 								<p>Es una prueba que tiene como objetivo darte una orientación sobre la Carrera que mas se adecua a tus intereses.</p>
+ 								<p align="justify">Es una prueba que tiene como objetivo darte una orientación sobre la Carrera que mas se adecua a tus intereses.</p>
 							</blockquote>
 							<button class="siguienteSlide btnOrange">Continuar!</button>
 						</div>
@@ -58,7 +58,7 @@
 						<div class="slide">
 							<h1>Instrucciones Generales</h1>
 							<blockquote class="bck">
-								<p>A continuación se te presentaran 6 bloques con 10 preguntas cada uno, al final seran 60 preguntas que conforman este test, cada bloque tiene una forma de resolucion e iteracción diferente, lee cuidadosamente las instrucciones y contesta la opción más acorde con tu sentir o con tu punto de vista, tomando en cuenta: <br />¿Que me gusta hacer? ¿Qué me interesa?.</p>
+								<p align="justify">A continuación se te presentaran 6 bloques con 10 preguntas cada uno, al final seran 60 preguntas que conforman este test, cada bloque tiene una forma de resolucion e iteracción diferente, lee cuidadosamente las instrucciones y contesta la opción más acorde con tu sentir o con tu punto de vista, tomando en cuenta: <br />¿Que me gusta hacer? ¿Qué me interesa?.</p>
 							</blockquote>
 							
 							<button class="iniciarTest btnGreen" data-modal="modal-4">Iniciar Test</button>
