Estilos del Formulario

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 							    <input name="ctutor" type="text" id="ctutor" minlength="7" placeholder="Nombre completo" required />
 								<br>
 								<br>
-
+									
 							</form>
 							<button class="submit btnOrange" type="submit" value="Submit">
-								<span class="glyphicon glyphicon-send"></span> Continuar!
+								<span class="glyphicon glyphicon-send"></span> Enviar!
 							</button>
 						</div>
 					</li>
@@ -98,7 +98,7 @@
 							<h1><img src="img/SoloLogoChicoBlanco.png" width="70px" /> Test de Intereses</h1>
 							<h1><span class="glyphicon glyphicon-flag"></span> Instrucciones Generales</h1>
 							<blockquote class="bck">
-								<p align="justify">A continuación se te presentaran 6 bloques con 10 preguntas cada uno, al final seran 60 preguntas que conforman este test, cada bloque tiene una forma de resolucion e iteracción diferente, lee cuidadosamente las instrucciones y contesta la opción más acorde con tu sentir o con tu punto de vista, tomando en cuenta: <br />¿Que me gusta hacer? ¿Qué me interesa?.</p>
+								<p align="justify">A continuación se te presentaran 6 bloques con 10 preguntas cada uno, al final seran 60 preguntas que conforman este test, cada bloque tiene una forma de resolución e interacción diferente, lee cuidadosamente las instrucciones y contesta la opción más acorde con tu sentir o con tu punto de vista, tomando en cuenta: <br />¿Que me gusta hacer? ¿Qué me interesa?.</p>
 							</blockquote>
 							
 							<button class="iniciarTest btnOrange" data-modal="modal-4"><span class="glyphicon glyphicon-play"></span> Iniciar Test</button>
@@ -153,7 +153,9 @@
 					        	<div class="cajaRespuestas">
 						          <table class="preguntasRespuestas"></table>
 						          <!-- <input type="button" value="Siguiente" class="btnSiguiente" /> -->
-						          <button class="btnSiguiente btnOrange">Continuar!</button>
+						          <button class="btnSiguiente btnOrange">
+						          <span class="glyphicon glyphicon-chevron-right"></span>Continuar!
+						      	  </button>
 					        	</div>
 					      	</div>
 						</div>
@@ -208,7 +210,7 @@
 						          <table class="preguntasRespuestas"></table>
 						          <!-- <input type="button" value="Siguiente" class="btnSiguiente" /> -->
 						          <button class="btnSiguiente btnOrange">
-						          <span class="glyphicon glyphicon-ok"></span> Continuar!
+						          <span class="glyphicon glyphicon-chevron-right"></span>Continuar!
 						      	  </button>
 					        	</div>
 					      	</div>
